@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD</license>
  <notes>
-* 
+* [mms] Application initialization should only be done on first access.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1023,7 +1023,7 @@
    <date>2011-12-13</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD</license>
    <notes>
-* 
+* [mms] Application initialization should only be done on first access.
    </notes>
   </release>
  </changelog>
